# etf-challenger

./: .gitignore  ANALYSIS_DOC.md  BATCH_GUIDE.md  CHANGELOG.md  CLAUDE.md  COMPARE_FEATURE_GUIDE.md  DATA_SOURCE_IMPROVEMENTS.md  DATA_SOURCE_OPTIMIZATION.md  DATA_SOURCE_TEST_REPORT.md  DEPLOYMENT.md  ETF_POOL_UPDATE.md  ETF_SCREENING_GUIDE.md  README.md  REPORT_FEATURE_GUIDE.md  TRADING_ADVISOR_GUIDE.md  UPGRADE_GUIDE.md  VERSION_ROADMAP.md  benchmark_data_sources.py  etf_compare.py  etf_pool.json  pyproject.toml  requirements.txt
deploy/: backup_config.sh  etf-monitor.service  health_check.sh  install.sh
docs/: ETF_ADVISOR_ANALYSIS.md  recommend_usage.md  v1.1_design.md
src/etf_challenger/: __init__.py
src/etf_challenger/analysis/: __init__.py  advisor.py  analyzer.py  batch_reporter.py  comparator.py  report.py  screener.py
src/etf_challenger/cli/: main.py
src/etf_challenger/config/: __init__.py  default_config.toml  scheduler_config.py
src/etf_challenger/data/: __init__.py  service.py
src/etf_challenger/models/: etf.py
src/etf_challenger/notification/: __init__.py  email_service.py  report_digest.py
src/etf_challenger/recommendation/: __init__.py  explainer.py  scorer.py
src/etf_challenger/scheduler/: __init__.py  daemon.py  job_scheduler.py  report_job.py  trading_calendar.py
src/etf_challenger/storage/: __init__.py  report_storage.py
src/etf_challenger/utils/: helpers.py  retry.py
tests/recommendation/: __init__.py  test_explainer.py  test_scorer.py
